--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "knip:fix": "knip --fix --allow-remove-files",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prepare": "husky",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit"
   },
@@ -29,6 +28,7 @@
     "vite-plugin-backloop.dev": "^1.0.7"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.4",
@@ -36,13 +36,10 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "eslint": "^9.32.0",
-    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.2.0",
-    "husky": "^9.1.7",
     "knip": "^5.62.0",
     "prettier": "3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
