Removing unused packages

--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "setup": "sh ./scripts/setup.sh",
     "build": "vite build",
     "dev": "vite",
-    "format": "npx prettier . --check",
-    "format:fix": "npx prettier . --write",
     "knip": "knip",
     "knip:fix": "knip --fix --allow-remove-files",
     "lint": "eslint .",
@@ -20,7 +18,6 @@
     "hds-lib-js": "git://github.com/healthdatasafe/hds-lib-js",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
-    "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.6.1",
@@ -36,10 +33,14 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "eslint": "^9.32.0",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-n": "^17.23.1",
+    "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.2.0",
     "knip": "^5.62.0",
-    "prettier": "3.6.2",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
